<resources>
    <string name="app_name">SimpleToDo</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="priority">Priority</string>
    <string name="status">Status</string>
    <string name="detail">DETAIL</string>
    <string name="add_task">Add task</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warnig</string>
    <string name="shure">Are you really sure that you want to delete this task?</string>
    <string name="position">POSITION</string>
    <string name="requiered">This value is required</string>
    <string name="todo">To do</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="edit">edit</string>
</resources>
