<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.omarsanchez.simpletodo.activities.AddActivity">

    <TextView
        android:text="@string/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:text="@string/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:text="@string/note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:text="@string/priority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:text="@string/status"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/colorAccent"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="511dp"
        android:id="@+id/guideline2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3046875"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="117dp" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/add_name"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/add_date"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.33"
        android:focusable="false"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/add_note"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8" />

    <Spinner
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:id="@+id/add_priority"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Spinner
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:id="@+id/add_status"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

</android.support.constraint.ConstraintLayout>
